2005-02-27  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_gstate.c (_cairo_rectangle_intersect): Fix this
	function again.  Problem with signed/unsigned types reported by
	Jeff Muizelaar <jrmuizel@nit.ca>.

2005-02-27  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo.h (cairo_fill_rule_t): Remove newline in comment which
	was confusing gtk-doc.

	* src/cairo_image_surface.c (cairo_image_surface_create_for_data) 
	(cairo_image_surface_create): Document these functions.

2005-02-25  Carl Worth  <cworth@cworth.org>

	* TODO: Note that "user data" and "setters and getters" patches
	have been reviewed. Remove a few more TODO notes:
		cleanup cairo_snippets: DONE
		cairo_surface_finish: Now in API Shakeup
		snapping code: Decided against this

2005-02-25  Carl Worth  <cworth@cworth.org>

	From David Reveman:

	* src/cairo_matrix.c (_cairo_matrix_is_integer_translation):
	Rewrite to use cairo_bool_t for legibility.

2005-02-25  Carl Worth  <cworth@cworth.org>

	From David Reveman:
	
	* src/cairo_gstate.c (_cairo_gstate_show_surface): Simplify code
	to eliminate a goto.

2005-02-25  Carl Worth  <cworth@cworth.org>

	From David Reveman:
	
	* src/cairo_gstate.c (_cairo_gstate_pattern_init_copy):
	(_cairo_gstate_clip_and_composite_trapezoids) 
	(_cairo_gstate_clip_and_composite_trapezoids) 
	(_cairo_gstate_show_surface, _cairo_gstate_show_glyphs) 
	(_cairo_gstate_show_glyphs): Clean up the mess that was
	the misnamed _cairo_gstate_create_pattern.

2005-02-25  Carl Worth  <cworth@cworth.org>

	* src/cairo_pattern.c (_cairo_pattern_shader_init): Don't put an
	off-by-one n_stops into cairo_shader_op_t.
	(_cairo_shader_op_find_color_stops): Put search for two color
	stops containing a given offset into its own function. Handle the
	case of before first and after last stop by returning the nearest
	stop twice.
	(_cairo_pattern_calc_color_at_pixel): Handle case of no color
	stops by returning a transparent pixel.

2005-02-24  Owen Taylor  <otaylor@redhat.com>
