@@ -1,3 +1,8 @@
+2005-03-01  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo_gstate.c (_cairo_gstate_show_surface): Fix
+	uninitialized value for status, (reported by Manish Singh).
+
 2005-02-27  Kristian Høgsberg  <krh@redhat.com>
 
 	* src/cairo_gstate.c (_cairo_rectangle_intersect): Fix this
